--- a/03-01-measuring-accuracy.ipynb
+++ b/03-01-measuring-accuracy.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "2"
+      ],
+      "text/latex": [
+       "2"
+      ],
+      "text/markdown": [
+       "2"
+      ],
+      "text/plain": [
+       "[1] 2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "sum((c(1,0,1) == c(0,0,1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -66,13 +94,17 @@
    "source": [
     "accuracy <- function (actual, predicted) {\n",
     "    # Write your code here.\n",
-    "    \n",
+    "    verify_length(actual, predicted)\n",
+    "    sum1 = sum(actual == predicted)\n",
+    "    print(sum1)\n",
+    "    return (sum1/length(actual))\n",
+    "            \n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -86,7 +118,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 3\n"
+     ]
+    }
+   ],
    "source": [
     "stopifnot(round(accuracy(c(1,1,0,0,1),c(1,1,1,0,0)), 2) == 0.60)"
    ]
@@ -97,6 +137,13 @@
    "source": [
     "**NOTE: You will need the code for your `accuracy` function in a later notebook.**"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
